gen/FactumParser.java
// Generated from D:/PUC_Projetos/COMP\Factum.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FactumParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, REAL=17, 
		INTEIRO=18, SIMBOLO=19, BOOLEANO=20, CADEIA=21, ABISTRATO=22, VALORES_TIPO_BOOLEANO=23, 
		VALORES_TIPO_INTEIRO=24, VALORES_TIPO_REAL=25, VALORES_TIPO_SIMBOLO=26, 
		VALOR_TIPO_CADEIA=27, SOMA=28, SUBTRAIR=29, MULTIPLICAR=30, DIVIDIR=31, 
		SIMBOLOS_DE_COMPARACAO=32, IGUAL=33, MENOR_IGUAL=34, MENOR=35, MAIOR_IGUAL=36, 
		MAIOR=37, DIFERENTE=38, SIMBOLO_LOGICO=39, CONJUCAO=40, DIJUNCAO=41, ASSOCIACAO_DE_IDENTIFICADORES_DE_TIPO_ABSTRATO=42, 
		DIG=43, ATRIBUICAO=44, TERMINAL=45, ID=46, SEP=47;
	public static final int
		RULE_gramatica_de_factum = 0, RULE_declaracao_de_variavel = 1, RULE_declaracao_de_variavel_sem_atribuicao = 2, 
		RULE_declaracao_de_variavel_abstrato_com_atribuicao = 3, RULE_declaracao_de_variavel_inteiro_com_atribuicao = 4, 
		RULE_declaracao_de_variavel_booleano_com_atribuicao = 5, RULE_declaracao_de_variavel_real_com_atribuicao = 6, 
		RULE_declaracao_de_variavel_simbolo_com_atribuicao = 7, RULE_declaracao_de_variavel_texto_com_atribuicao = 8, 
		RULE_tipos_de_valores = 9, RULE_expressao_aritmetica = 10, RULE_concatenacao_de_cadeias = 11, 
		RULE_tipos_de_cadeias_elemento = 12, RULE_expressao_aritmetica_numericas = 13, 
		RULE_tipo_de_valores_numericos = 14, RULE_operador = 15, RULE_atribuicao_de_variavel = 16, 
		RULE_atribuicao_de_valores = 17, RULE_instrucao_de_controle = 18, RULE_instrucao_de_restricao_de_dominio = 19, 
		RULE_logica_proposicional_entre_comparacoes = 20, RULE_instrucao_de_repeticao_condicional_inicial = 21, 
		RULE_instrucao_de_repeticao_condicional_final = 22, RULE_instrucao_de_repeticao_com_contador = 23, 
		RULE_instrucoes_de_troca_de_valor = 24, RULE_declaracao_de_funcao_metodo = 25, 
		RULE_criacao_de_tipo_abstrato = 26, RULE_formato_de_tipo_abstrato = 27, 
		RULE_metodo_abstrato = 28, RULE_chamada_de_funcao_tipo_abstrato = 29, 
		RULE_funcao_principal = 30, RULE_chamada_de_funcao = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"gramatica_de_factum", "declaracao_de_variavel", "declaracao_de_variavel_sem_atribuicao", 
			"declaracao_de_variavel_abstrato_com_atribuicao", "declaracao_de_variavel_inteiro_com_atribuicao", 
			"declaracao_de_variavel_booleano_com_atribuicao", "declaracao_de_variavel_real_com_atribuicao", 
			"declaracao_de_variavel_simbolo_com_atribuicao", "declaracao_de_variavel_texto_com_atribuicao", 
			"tipos_de_valores", "expressao_aritmetica", "concatenacao_de_cadeias", 
			"tipos_de_cadeias_elemento", "expressao_aritmetica_numericas", "tipo_de_valores_numericos", 
			"operador", "atribuicao_de_variavel", "atribuicao_de_valores", "instrucao_de_controle", 
			"instrucao_de_restricao_de_dominio", "logica_proposicional_entre_comparacoes", 
			"instrucao_de_repeticao_condicional_inicial", "instrucao_de_repeticao_condicional_final", 
			"instrucao_de_repeticao_com_contador", "instrucoes_de_troca_de_valor", 
			"declaracao_de_funcao_metodo", "criacao_de_tipo_abstrato", "formato_de_tipo_abstrato", 
			"metodo_abstrato", "chamada_de_funcao_tipo_abstrato", "funcao_principal", 
			"chamada_de_funcao"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'se'", "'{'", "'}'", "'senao'", "'enquanto'", "'repita'", 
			"'ate'", "'para'", "'INICIO'", "','", "'retorna'", "'FIM'", "'TIPO'", 
			"'main'", "'real'", "'inteiro'", "'simbolo'", "'booleano'", "'cadeia'", 
			null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", null, 
			"'=='", "'<='", "'<'", "'>='", "'>'", "'!='", null, "'&&'", "'||'", null, 
			null, "'='", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "REAL", "INTEIRO", "SIMBOLO", "BOOLEANO", 
			"CADEIA", "ABISTRATO", "VALORES_TIPO_BOOLEANO", "VALORES_TIPO_INTEIRO", 
			"VALORES_TIPO_REAL", "VALORES_TIPO_SIMBOLO", "VALOR_TIPO_CADEIA", "SOMA", 
			"SUBTRAIR", "MULTIPLICAR", "DIVIDIR", "SIMBOLOS_DE_COMPARACAO", "IGUAL", 
			"MENOR_IGUAL", "MENOR", "MAIOR_IGUAL", "MAIOR", "DIFERENTE", "SIMBOLO_LOGICO", 
			"CONJUCAO", "DIJUNCAO", "ASSOCIACAO_DE_IDENTIFICADORES_DE_TIPO_ABSTRATO", 
			"DIG", "ATRIBUICAO", "TERMINAL", "ID", "SEP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Factum.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FactumParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Gramatica_de_factumContext extends ParserRuleContext {
		public Funcao_principalContext funcao_principal() {
			return getRuleContext(Funcao_principalContext.class,0);
		}
		public List<Declaracao_de_variavel_sem_atribuicaoContext> declaracao_de_variavel_sem_atribuicao() {
			return getRuleContexts(Declaracao_de_variavel_sem_atribuicaoContext.class);
		}
		public Declaracao_de_variavel_sem_atribuicaoContext declaracao_de_variavel_sem_atribuicao(int i) {
			return getRuleContext(Declaracao_de_variavel_sem_atribuicaoContext.class,i);
		}
		public List<TerminalNode> TERMINAL() { return getTokens(FactumParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(FactumParser.TERMINAL, i);
		}
		public List<Declaracao_de_funcao_metodoContext> declaracao_de_funcao_metodo() {
			return getRuleContexts(Declaracao_de_funcao_metodoContext.class);
		}
		public Declaracao_de_funcao_metodoContext declaracao_de_funcao_metodo(int i) {
			return getRuleContext(Declaracao_de_funcao_metodoContext.class,i);
		}
		public List<Criacao_de_tipo_abstratoContext> criacao_de_tipo_abstrato() {
			return getRuleContexts(Criacao_de_tipo_abstratoContext.class);
		}
		public Criacao_de_tipo_abstratoContext criacao_de_tipo_abstrato(int i) {
			return getRuleContext(Criacao_de_tipo_abstratoContext.class,i);
		}
		public Gramatica_de_factumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gramatica_de_factum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterGramatica_de_factum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitGramatica_de_factum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitGramatica_de_factum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Gramatica_de_factumContext gramatica_de_factum() throws RecognitionException {
		Gramatica_de_factumContext _localctx = new Gramatica_de_factumContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_gramatica_de_factum);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REAL) | (1L << INTEIRO) | (1L << SIMBOLO) | (1L << BOOLEANO) | (1L << CADEIA) | (1L << ABISTRATO))) != 0)) {
				{
				{
				setState(64);
				declaracao_de_variavel_sem_atribuicao();
				setState(65);
				match(TERMINAL);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			funcao_principal();
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(73);
					declaracao_de_funcao_metodo();
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(79);
				criacao_de_tipo_abstrato();
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_de_variavelContext extends ParserRuleContext {
		public TerminalNode TERMINAL() { return getToken(FactumParser.TERMINAL, 0); }
		public Declaracao_de_variavel_sem_atribuicaoContext declaracao_de_variavel_sem_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_sem_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_abstrato_com_atribuicaoContext declaracao_de_variavel_abstrato_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_abstrato_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_booleano_com_atribuicaoContext declaracao_de_variavel_booleano_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_booleano_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_inteiro_com_atribuicaoContext declaracao_de_variavel_inteiro_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_inteiro_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_real_com_atribuicaoContext declaracao_de_variavel_real_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_real_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_simbolo_com_atribuicaoContext declaracao_de_variavel_simbolo_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_simbolo_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavel_texto_com_atribuicaoContext declaracao_de_variavel_texto_com_atribuicao() {
			return getRuleContext(Declaracao_de_variavel_texto_com_atribuicaoContext.class,0);
		}
		public Declaracao_de_variavelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_de_variavel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterDeclaracao_de_variavel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitDeclaracao_de_variavel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitDeclaracao_de_variavel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_de_variavelContext declaracao_de_variavel() throws RecognitionException {
		Declaracao_de_variavelContext _localctx = new Declaracao_de_variavelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao_de_variavel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(85);
				declaracao_de_variavel_sem_atribuicao();
				}
				break;
			case 2:
				{
				setState(86);
				declaracao_de_variavel_abstrato_com_atribuicao();
				}
				break;
			case 3:
				{
				setState(87);
				declaracao_de_variavel_booleano_com_atribuicao();
				}
				break;
			case 4:
				{
				setState(88);
				declaracao_de_variavel_inteiro_com_atribuicao();
				}
				break;
			case 5:
				{
				setState(89);
				declaracao_de_variavel_real_com_atribuicao();
				}
				break;
			case 6:
				{
				setState(90);
				declaracao_de_variavel_simbolo_com_atribuicao();
				}
				break;
			case 7:
				{
				setState(91);
				declaracao_de_variavel_texto_com_atribuicao();
				}
				break;
			}
			setState(94);
			match(TERMINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_de_variavel_sem_atribuicaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FactumParser.ID, 0); }
		public TerminalNode REAL() { return getToken(FactumParser.REAL, 0); }
		public TerminalNode INTEIRO() { return getToken(FactumParser.INTEIRO, 0); }
		public TerminalNode SIMBOLO() { return getToken(FactumParser.SIMBOLO, 0); }
		public TerminalNode CADEIA() { return getToken(FactumParser.CADEIA, 0); }
		public TerminalNode BOOLEANO() { return getToken(FactumParser.BOOLEANO, 0); }
		public TerminalNode ABISTRATO() { return getToken(FactumParser.ABISTRATO, 0); }
		public Declaracao_de_variavel_sem_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_de_variavel_sem_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterDeclaracao_de_variavel_sem_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitDeclaracao_de_variavel_sem_atribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitDeclaracao_de_variavel_sem_atribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_de_variavel_sem_atribuicaoContext declaracao_de_variavel_sem_atribuicao() throws RecognitionException {
		Declaracao_de_variavel_sem_atribuicaoContext _localctx = new Declaracao_de_variavel_sem_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao_de_variavel_sem_atribuicao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REAL) | (1L << INTEIRO) | (1L << SIMBOLO) | (1L << BOOLEANO) | (1L << CADEIA) | (1L << ABISTRATO))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(97);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_de_variavel_abstrato_com_atribuicaoContext extends ParserRuleContext {
		public TerminalNode ABISTRATO() { return getToken(FactumParser.ABISTRATO, 0); }
		public List<TerminalNode> ID() { return getTokens(FactumParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FactumParser.ID, i);
		}
		public Declaracao_de_variavel_abstrato_com_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_de_variavel_abstrato_com_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterDeclaracao_de_variavel_abstrato_com_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitDeclaracao_de_variavel_abstrato_com_atribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitDeclaracao_de_variavel_abstrato_com_atribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_de_variavel_abstrato_com_atribuicaoContext declaracao_de_variavel_abstrato_com_atribuicao() throws RecognitionException {
		Declaracao_de_variavel_abstrato_com_atribuicaoContext _localctx = new Declaracao_de_variavel_abstrato_com_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaracao_de_variavel_abstrato_com_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(ABISTRATO);
			setState(100);
			match(ID);
			setState(101);
			match(T__0);
			setState(102);
			match(ID);
			setState(103);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_de_variavel_inteiro_com_atribuicaoContext extends ParserRuleContext {
		public TerminalNode INTEIRO() { return getToken(FactumParser.INTEIRO, 0); }
		public TerminalNode ID() { return getToken(FactumParser.ID, 0); }
		public TerminalNode ATRIBUICAO() { return getToken(FactumParser.ATRIBUICAO, 0); }
		public TerminalNode VALORES_TIPO_INTEIRO() { return getToken(FactumParser.VALORES_TIPO_INTEIRO, 0); }
		public Declaracao_de_variavel_inteiro_com_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_de_variavel_inteiro_com_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterDeclaracao_de_variavel_inteiro_com_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitDeclaracao_de_variavel_inteiro_com_atribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitDeclaracao_de_variavel_inteiro_com_atribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_de_variavel_inteiro_com_atribuicaoContext declaracao_de_variavel_inteiro_com_atribuicao() throws RecognitionException {
		Declaracao_de_variavel_inteiro_com_atribuicaoContext _localctx = new Declaracao_de_variavel_inteiro_com_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaracao_de_variavel_inteiro_com_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(INTEIRO);
			setState(106);
			match(ID);
			setState(107);
			match(ATRIBUICAO);
			setState(108);
			match(VALORES_TIPO_INTEIRO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_de_variavel_booleano_com_atribuicaoContext extends ParserRuleContext {
		public TerminalNode BOOLEANO() { return getToken(FactumParser.BOOLEANO, 0); }
		public TerminalNode ID() { return getToken(FactumParser.ID, 0); }
		public TerminalNode ATRIBUICAO() { return getToken(FactumParser.ATRIBUICAO, 0); }
		public TerminalNode VALORES_TIPO_BOOLEANO() { return getToken(FactumParser.VALORES_TIPO_BOOLEANO, 0); }
		public Declaracao_de_variavel_booleano_com_atribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_de_variavel_booleano_com_atribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).enterDeclaracao_de_variavel_booleano_com_atribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FactumListener ) ((FactumListener)listener).exitDeclaracao_de_variavel_booleano_com_atribuicao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FactumVisitor ) return ((FactumVisitor<? extends T>)visitor).visitDeclaracao_de_variavel_booleano_com_atribuicao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_de_variavel_booleano_com_atribuicaoContext declaracao_de_variavel_booleano_com_atribuicao() throws RecognitionException {
		Declaracao_de_variavel_booleano_com_atribuicaoContext _localctx = new Declaracao_de_variavel_booleano_com_atribuicaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracao_de_variavel_booleano_com_atribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(BOOLEANO);
			setState(111);
			match(ID);
			setState(112);
			match(ATRIBUICAO);
			setState(113);
			match(VALORES_TIPO_BOOLEANO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
